--- a/MobileShop.WinUI/MobileShop.WinUI.csproj
+++ b/MobileShop.WinUI/MobileShop.WinUI.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Zahtjevi\frmZahtjevi.Designer.cs">
       <DependentUpon>frmZahtjevi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Zahtjevi\frmZahtjeviOdgovor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Zahtjevi\frmZahtjeviOdgovor.Designer.cs">
+      <DependentUpon>frmZahtjeviOdgovor.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -81,6 +87,9 @@
     </Compile>
     <EmbeddedResource Include="Zahtjevi\frmZahtjevi.resx">
       <DependentUpon>frmZahtjevi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Zahtjevi\frmZahtjeviOdgovor.resx">
+      <DependentUpon>frmZahtjeviOdgovor.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
