--- a/MobileShop.WinUI/MobileShop.WinUI.csproj
+++ b/MobileShop.WinUI/MobileShop.WinUI.csproj
@@ -104,6 +104,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Skladista\frmSkladista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Skladista\frmSkladista.Designer.cs">
+      <DependentUpon>frmSkladista.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Skladista\frmSkladistaDetalji.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Skladista\frmSkladistaDetalji.Designer.cs">
+      <DependentUpon>frmSkladistaDetalji.cs</DependentUpon>
+    </Compile>
     <Compile Include="Zahtjevi\frmZahtjevi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +155,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Skladista\frmSkladista.resx">
+      <DependentUpon>frmSkladista.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Skladista\frmSkladistaDetalji.resx">
+      <DependentUpon>frmSkladistaDetalji.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Zahtjevi\frmZahtjevi.resx">
       <DependentUpon>frmZahtjevi.cs</DependentUpon>
     </EmbeddedResource>
