--- a/MobileShop.WinUI/MobileShop.WinUI.csproj
+++ b/MobileShop.WinUI/MobileShop.WinUI.csproj
@@ -60,6 +60,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIService.cs" />
+    <Compile Include="Dobavljaci\frmDobavljaci.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dobavljaci\frmDobavljaci.Designer.cs">
+      <DependentUpon>frmDobavljaci.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,8 +108,26 @@
     <Compile Include="Nabavke\frmNabavke.Designer.cs">
       <DependentUpon>frmNabavke.cs</DependentUpon>
     </Compile>
+    <Compile Include="Nabavke\frmNovaNabavka.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Nabavke\frmNovaNabavka.Designer.cs">
+      <DependentUpon>frmNovaNabavka.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Skladista\frmSkladista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Skladista\frmSkladista.Designer.cs">
+      <DependentUpon>frmSkladista.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Skladista\frmSkladistaDetalji.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Skladista\frmSkladistaDetalji.Designer.cs">
+      <DependentUpon>frmSkladistaDetalji.cs</DependentUpon>
+    </Compile>
     <Compile Include="Zahtjevi\frmZahtjevi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +140,9 @@
     <Compile Include="Zahtjevi\frmZahtjeviOdgovor.Designer.cs">
       <DependentUpon>frmZahtjeviOdgovor.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Dobavljaci\frmDobavljaci.resx">
+      <DependentUpon>frmDobavljaci.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmIndexAdmin.resx">
       <DependentUpon>frmIndexAdmin.cs</DependentUpon>
     </EmbeddedResource>
@@ -134,6 +161,9 @@
     <EmbeddedResource Include="Nabavke\frmNabavke.resx">
       <DependentUpon>frmNabavke.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Nabavke\frmNovaNabavka.resx">
+      <DependentUpon>frmNovaNabavka.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -143,6 +173,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Skladista\frmSkladista.resx">
+      <DependentUpon>frmSkladista.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Skladista\frmSkladistaDetalji.resx">
+      <DependentUpon>frmSkladistaDetalji.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Zahtjevi\frmZahtjevi.resx">
       <DependentUpon>frmZahtjevi.cs</DependentUpon>
     </EmbeddedResource>
