--- a/MobileShop.WinUI/MobileShop.WinUI.csproj
+++ b/MobileShop.WinUI/MobileShop.WinUI.csproj
@@ -114,6 +114,18 @@
     <Compile Include="Nabavke\frmNovaNabavka.Designer.cs">
       <DependentUpon>frmNovaNabavka.cs</DependentUpon>
     </Compile>
+    <Compile Include="Obavijesti\frmObavijesti.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Obavijesti\frmObavijesti.Designer.cs">
+      <DependentUpon>frmObavijesti.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Obavijesti\frmObavijestiDetalji.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Obavijesti\frmObavijestiDetalji.Designer.cs">
+      <DependentUpon>frmObavijestiDetalji.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Skladista\frmSkladista.cs">
@@ -163,6 +175,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Nabavke\frmNovaNabavka.resx">
       <DependentUpon>frmNovaNabavka.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Obavijesti\frmObavijesti.resx">
+      <DependentUpon>frmObavijesti.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Obavijesti\frmObavijestiDetalji.resx">
+      <DependentUpon>frmObavijestiDetalji.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
