--- a/MobileShop.WinUI/App.config
+++ b/MobileShop.WinUI/App.config
@@ -8,6 +8,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+
+    <add key="resizedWidthObavijesti" value="325"/>
+    <add key="resizedHeightObavijesti" value="250"/>
+    <add key="resizedWidthObavijestiDetalji" value="400"/>
+    <add key="resizedHeightObavijestiDetalji" value="180"/>
+  
+  </appSettings>
     <applicationSettings>
         <MobileShop.WinUI.Properties.Settings>
             <setting name="APIUrl" serializeAs="String">
