--- a/MobileShop.WinUI/MobileShop.WinUI.csproj
+++ b/MobileShop.WinUI/MobileShop.WinUI.csproj
@@ -123,6 +123,12 @@
     <Compile Include="Narudzbe\frmNarudzbe.Designer.cs">
       <DependentUpon>frmNarudzbe.cs</DependentUpon>
     </Compile>
+    <Compile Include="Narudzbe\frmNarudzbeDetalji.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Narudzbe\frmNarudzbeDetalji.Designer.cs">
+      <DependentUpon>frmNarudzbeDetalji.cs</DependentUpon>
+    </Compile>
     <Compile Include="Obavijesti\frmNovaObavijest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Narudzbe\frmNarudzbe.resx">
       <DependentUpon>frmNarudzbe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Narudzbe\frmNarudzbeDetalji.resx">
+      <DependentUpon>frmNarudzbeDetalji.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Obavijesti\frmNovaObavijest.resx">
       <DependentUpon>frmNovaObavijest.cs</DependentUpon>
