--- a/MobileShop.WinUI/App.config
+++ b/MobileShop.WinUI/App.config
@@ -19,7 +19,7 @@
     <applicationSettings>
         <MobileShop.WinUI.Properties.Settings>
             <setting name="APIUrl" serializeAs="String">
-                <value>https://localhost:44371/api</value>
+                <value>http://localhost:62344/api</value>
             </setting>
         </MobileShop.WinUI.Properties.Settings>
     </applicationSettings>
