--- a/MobileShop.WinUI/Properties/Settings.settings
+++ b/MobileShop.WinUI/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="APIUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://localhost:44371/api</Value>
+      <Value Profile="(Default)">http://localhost:62344/api</Value>
     </Setting>
   </Settings>
 </SettingsFile>
