--- a/MobileShop.Mobile/MobileShop.Mobile.Android/MobileShop.Mobile.Android.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile.Android/MobileShop.Mobile.Android.csproj
@@ -107,5 +107,8 @@
       <Name>MobileShop.Mobile</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\cart.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
