--- a/MobileShop.Mobile/MobileShop.Mobile.UWP/MobileShop.Mobile.UWP.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile.UWP/MobileShop.Mobile.UWP.csproj
@@ -152,6 +152,12 @@
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.778454" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material">
+      <Version>4.1.0.778454</Version>
+    </PackageReference>
+    <PackageReference Include="XamarinFastEntry.Behaviors">
+      <Version>1.1.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MobileShop.Mobile\MobileShop.Mobile.csproj">
