--- a/MobileShop.Mobile/MobileShop.Mobile.iOS/MobileShop.Mobile.iOS.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile.iOS/MobileShop.Mobile.iOS.csproj
@@ -131,6 +131,12 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.778454" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material">
+      <Version>4.1.0.778454</Version>
+    </PackageReference>
+    <PackageReference Include="XamarinFastEntry.Behaviors">
+      <Version>1.1.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
