--- a/MobileShop.Mobile/MobileShop.Mobile/MobileShop.Mobile.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile/MobileShop.Mobile.csproj
@@ -53,5 +53,11 @@
     <EmbeddedResource Update="Views\NarudzbaPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ObavijestiPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ZahtjeviPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
