--- a/MobileShop.Mobile/MobileShop.Mobile.Android/MobileShop.Mobile.Android.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile.Android/MobileShop.Mobile.Android.csproj
@@ -61,6 +61,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
       <Version>2.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Stripe.net">
+      <Version>37.4.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.778454" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
