--- a/MobileShop.Mobile/MobileShop.Mobile.UWP/MobileShop.Mobile.UWP.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile.UWP/MobileShop.Mobile.UWP.csproj
@@ -149,6 +149,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Stripe.net">
+      <Version>37.4.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.778454" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
