--- a/MobileShop.Mobile/MobileShop.Mobile.iOS/MobileShop.Mobile.iOS.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile.iOS/MobileShop.Mobile.iOS.csproj
@@ -129,6 +129,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Stripe.net">
+      <Version>37.4.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.778454" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.Visual.Material">
