--- a/MobileShop.Mobile/MobileShop.Mobile/MobileShop.Mobile.csproj
+++ b/MobileShop.Mobile/MobileShop.Mobile/MobileShop.Mobile.csproj
@@ -61,13 +61,10 @@
     <EmbeddedResource Update="Views\ArtikliPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\CreditCardDisplayView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\CreditCardPage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
     <EmbeddedResource Update="Views\HistorijaNarudzbi.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\HistorijaNarudzbiDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\HistorijaZahtjevaPage.xaml">
